drag and drop refactor

--- a/examples/drag_and_drop_example/assets/index.html
+++ b/examples/drag_and_drop_example/assets/index.html
@@ -193,7 +193,7 @@
       });
 
       // Handle native drop
-      dropArea.addEventListener('nativedrop', (e) => {
+      dropArea.addEventListener('deskgui:drop', (e) => {
         const paths = e.detail.paths;
         const invalidFiles = paths.filter(path => !isValidFileType(path));
         
