minor windows fixes

--- a/examples/drag_and_drop_example/assets/index.html
+++ b/examples/drag_and_drop_example/assets/index.html
@@ -10,6 +10,7 @@
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
+      background-color: #e4cb35;
     }
     h1 {
       text-align: center;
